# mpv_websocket

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  deny.toml  flake.nix
.github/: FUNDING.yml
.github/workflows/: artifacts.yml  ci.yml  publish.yml
mpv/: input.conf  mpv.conf
mpv/scripts/: run_websocket_server.lua  run_websocket_server_linux.lua  run_websocket_server_windows.lua
src/: main.rs  mio_channel.rs  mpv.rs  websocket.rs
