[package]
name = "mpv_websocket"
version = "0.4.1"
edition = "2021"
authors = ["kuroahna"]
repository = "https://github.com/kuroahna/mpv_websocket"
homepage = "https://github.com/kuroahna/mpv_websocket"
license = "MIT"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
debug = false
strip = "symbols"
opt-level = 3
codegen-units = 1

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
mio = { version = "1.0.3", default-features = false, features = [
  "os-poll",
  "net",
] }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.138", default-features = false, features = [
  "std",
] }
tungstenite = { version = "0.26.1", default-features = false, features = [
  "handshake",
] }

[target.'cfg(windows)'.dependencies]
mio = { version = "1.0.3", default-features = false, features = ["os-ext"] }
windows-sys = { version = "0.59.0", default-features = false, features = [
  "Win32_Storage_FileSystem",
] }
